[gd_scene load_steps=4 format=3 uid="uid://co5b8bkxacsiu"]

[ext_resource type="Theme" uid="uid://do7l7mi3b8iju" path="res://resources/ ui_theme.tres" id="1_gfesd"]
[ext_resource type="Script" uid="uid://d3fanl6unppfe" path="res://keybind_settings.gd" id="1_jtvdw"]
[ext_resource type="PackedScene" uid="uid://dk8dbgsnoch8s" path="res://keybind_button.tscn" id="2_pjluo"]

[node name="keybind_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jtvdw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -430.0
offset_top = -465.0
offset_right = 430.0
offset_bottom = 465.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="keybind_list" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/keybind_list" instance=ExtResource("2_pjluo")]
layout_mode = 2

[node name="Button2" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/keybind_list" instance=ExtResource("2_pjluo")]
layout_mode = 2

[node name="Button3" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/keybind_list" instance=ExtResource("2_pjluo")]
layout_mode = 2

[node name="Button4" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/ScrollContainer/keybind_list" instance=ExtResource("2_pjluo")]
layout_mode = 2

[node name="b_reset" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_gfesd")
text = "RESET TO DEFAULTS"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/b_reset" to="." method="_on_reset_pressed"]
